load("//rules:framework.bzl", "apple_framework", "apple_prebuilt_static_framework")
load("@build_bazel_rules_apple//apple:apple.bzl", "apple_dynamic_framework_import")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

apple_prebuilt_static_framework(
  name = "InputMask",
  path = "Carthage/build/iOS/Static/InputMask.framework",
  visibility = ["//visibility:public"],
)

apple_framework(
    name = "MixedSourceFramework",
    srcs = glob(
        include = [
            "MixedSourceFramework/**/*.h",
            "MixedSourceFramework/**/*.m",
            "MixedSourceFramework/**/*.swift"
            ],
        exclude = ["MixedSourceFramework/MixedSourceFramework.h"],
    ),
    deps = [
        ":InputMask",
    ],    
    visibility = ["//visibility:public"],
    # includes = ["module.modulemap"]
)

